--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@300&family=Lobster&family=Mali:wght@300;500;700&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="../comisionAndre 44355/css/normailize.css">
-    <link rel="stylesheet" href="../comisionAndre 44355/css/stylo.css">
+    <link rel="stylesheet" href=".//css/normailize.css">
+    <link rel="stylesheet" href=".//css/stylo.css">
 </head>
 
 <body>
