cambio de rutas de logos y pages

--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
             <nav>
                 <ul>
                     <li><a href="./index.html">Inicio</a></li>
-                    <li><a href="../comisionAndre 44355/pages/quiensoy.html">Quien Soy</a></li>
-                    <li><a href="../comisionAndre 44355/pages/trabajos.html">Trabajos</a></li>
-                    <li><a href="../comisionAndre 44355/pages/contacto.html">Contacto</a></li>
-                    <a href="../comisionAndre 44355/pages/busqueda.html"><img class="imgLupa"
-                            src="../comisionAndre 44355/img/lupa.png" alt="Imagen de Lupa"></a>
+                    <li><a href=".//pages/quiensoy.html">Quien Soy</a></li>
+                    <li><a href=".//pages/trabajos.html">Trabajos</a></li>
+                    <li><a href=".//pages/trabajos.html">Contacto</a></li>
+                    <a href=".//pages/busqueda.html"><img class="imgLupa"
+                            src=".//img/lupa.png" alt="Imagen de Lupa"></a>
                 </ul>
             </nav>
         </div>
@@ -152,16 +152,16 @@
         <div>
             <ul>
                 <li><a href="./index.html">Inicio</a></li>
-                <li><a href="../comisionAndre 44355/pages/quiensoy.html">Quien Soy</a></li>
-                <li><a href="../comisionAndre 44355/pages/trabajos.html">Trabajos</a></li>
-                <li><a href="../comisionAndre 44355/pages/contacto.html">Contacto</a></li>
-                <a href="../comisionAndre 44355/pages/busqueda.html"><img class="imgLupa" src="./img/lupa.png"
+                <li><a href=".//pages/quiensoy.html">Quien Soy</a></li>
+                <li><a href=".//pages/trabajos.html">Trabajos</a></li>
+                <li><a href=".//pages/contacto.html">Contacto</a></li>
+                <a href=".//pages/busqueda.html"><img class="imgLupa" src="./img/lupa.png"
                         alt="Imagen de Busqueda"></a>
             </ul>
             <section>
-                <a href=""><img src="../comisionAndre 44355/img/whatsapp.png" alt="logo what ap"></a>
-                <a href=""><img src="../comisionAndre 44355/img/instagram.png" alt="logo instagram"></a>
-                <a href=""><img src="../comisionAndre 44355/img/facebook.png" alt="logo facebook"></a>
+                <a href=""><img src=".//img/whatsapp.png" alt="logo what ap"></a>
+                <a href=""><img src=".//img/instagram.png" alt="logo instagram"></a>
+                <a href=""><img src=".//img/facebook.png" alt="logo facebook"></a>
 
             </section>
 
