2 arreglo de @medias

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 
         <section class="etapaFinal">
 
-            <div>
+            <div class="tutorialGral">
                 <h2 class="tutorialTitulo">Tutorial</h2>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Delectus quae error corrupti, consequatur
                     enim eius repellendus fugiat ad dolore. Quaerat, aspernatur cupiditate neque distinctio sit at odit
