--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@300&family=Lobster&family=Mali:wght@300;500;700&display=swap"
         rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href=".//css/normailize.css">
     <link rel="stylesheet" href=".//css/stylo.css">
 </head>
@@ -30,17 +32,53 @@
                     <li><a href=".//pages/quiensoy.html">Quien Soy</a></li>
                     <li><a href=".//pages/trabajos.html">Trabajos</a></li>
                     <li><a href=".//pages/trabajos.html">Contacto</a></li>
-                    <a href=".//pages/busqueda.html"><img class="imgLupa"
-                            src=".//img/lupa.png" alt="Imagen de Lupa"></a>
+                    <a href=".//pages/busqueda.html"><img class="imgLupa" src=".//img/lupa.png"
+                            alt="Imagen de Lupa"></a>
                 </ul>
             </nav>
         </div>
     </header>
     <main>
         <section>
-            <!--fotos frandes que se desplazan-->
+            <!--carrusel-->
             <div class="imgCarrusel">
-                <img class="imagenInicio" src=".//img/fotocarrusel1.jpeg" alt="fotos de trabajos realizados">
+                <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+                    <div class="carousel-indicators">
+                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
+                            class="active" aria-current="true" aria-label="Slide 1"></button>
+                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+                            aria-label="Slide 2"></button>
+                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+                            aria-label="Slide 3"></button>
+                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3"
+                            aria-label="Slide 4"></button>
+                    </div>
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img src=".//img/fotocarrusel1modificada.jpg" class="d-block w-100" alt="imagen con cuadro">
+                        </div>
+                        <div class="carousel-item">
+                            <img src=".//img/cuadromarilynmodificado.jpg" class="d-block w-100" alt="cuadro Marilyn">
+                        </div>
+                        <div class="carousel-item">
+                            <img src=".//img/expomodificada.jpg" class="d-block w-100" alt="exposicion de arte">
+                        </div>
+                        <div class="carousel-item">
+                            <img src=".//img/cartelhacerloqueamas.jpeg" class="d-block w-100"
+                                alt="cartel hacer lo que amas">
+                        </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+                        data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+                        data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                    </button>
+                </div>
             </div>
         </section>
 
@@ -155,8 +193,7 @@
                 <li><a href=".//pages/quiensoy.html">Quien Soy</a></li>
                 <li><a href=".//pages/trabajos.html">Trabajos</a></li>
                 <li><a href=".//pages/contacto.html">Contacto</a></li>
-                <a href=".//pages/busqueda.html"><img class="imgLupa" src="./img/lupa.png"
-                        alt="Imagen de Busqueda"></a>
+                <a href=".//pages/busqueda.html"><img class="imgLupa" src="./img/lupa.png" alt="Imagen de Busqueda"></a>
             </ul>
             <section>
                 <a href=""><img src=".//img/whatsapp.png" alt="logo what ap"></a>
@@ -169,7 +206,9 @@
         </div>
 
     </footer>
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
