--- a/index.html
+++ b/index.html
@@ -55,16 +55,16 @@
                     </div>
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src=".//img/fotocarrusel1modificada.jpg" class="d-block w-100" alt="imagen con cuadro">
+                            <img src=".//img/carro-1.webp" class="d-block w-100" alt="imagen con cuadro">
                         </div>
                         <div class="carousel-item">
-                            <img src=".//img/cuadromarilynmodificado.jpg" class="d-block w-100" alt="cuadro Marilyn">
+                            <img src=".//img/carro-mesa.webp" class="d-block w-100" alt="mesa ying yang">
                         </div>
                         <div class="carousel-item">
-                            <img src=".//img/expomodificada.jpg" class="d-block w-100" alt="exposicion de arte">
+                            <img src=".//img/carro-expo.webp" class="d-block w-100" alt="exposicion de arte">
                         </div>
                         <div class="carousel-item">
-                            <img src=".//img/cartelhacerloqueamas.jpeg" class="d-block w-100"
+                            <img src=".//img/Untitled.jpg" class="d-block w-100"
                                 alt="cartel hacer lo que amas">
                         </div>
                     </div>
