arreglo acceso foto reciclando

--- a/pages/trabajos.html
+++ b/pages/trabajos.html
@@ -62,7 +62,7 @@
                     <a href="">detalles</a>
                 </div>
                 <div class="textoenContenedor">
-                    <img src="../img/reciclandoportada.jpg" alt="imagen reciclando">
+                    <img src="../img/picasieteportada.JPG" alt="imagen reciclando">
                     <a href="">reciclando</a>
                 </div>
             </div>
