--- a/pages/busqueda.html
+++ b/pages/busqueda.html
@@ -13,7 +13,7 @@
         href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@300&family=Lobster&family=Mali:wght@300;500;700&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="../css/normailize.css">
-    <link rel="stylesheet" href="../css/stylo.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 
 <body>
