--- a/pages/quiensoy.html
+++ b/pages/quiensoy.html
@@ -53,9 +53,9 @@
                 <a href="./busqueda.html"><img class="imgLupa" src="../img/lupa.png" alt="Imagen de Busqueda"></a>
             </ul>
             <section>
-                <a href=""><img src="../img/whatsapp.png" alt="logo what ap"></a>
-                <a href=""><img src="../img/instagram.png" alt="logo instagram"></a>
-                <a href=""><img src="../img/facebook.png" alt="logo facebook"></a>
+                <a target="_blank" href="https://api.whatsapp.com/send?phone=541156259700"><img src="../img/whatsapp.png" alt="logo what ap"></a>
+                <a target="_blank" href="https://www.instagram.com/arte.rox/"><img src="../img/instagram.png" alt="logo instagram"></a>
+                <a target="_blank" href="https://www.facebook.com/roxana.barreiro.56"><img src="../img/facebook.png" alt="logo facebook"></a>
 
             </section>
         </div>
