--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
 </head>
 
 <body>
+
+    <!---Header----->
+
     <header class="contenedorHeader">
         <!--LOGO-->
         <div>
@@ -38,6 +41,8 @@
             </nav>
         </div>
     </header>
+
+    <!-----Main-------->
     <main>
         <section>
             <!--carrusel-->
@@ -64,8 +69,7 @@
                             <img src=".//img/carro-expo.webp" class="d-block w-100" alt="exposicion de arte">
                         </div>
                         <div class="carousel-item">
-                            <img src=".//img/Untitled.jpg" class="d-block w-100"
-                                alt="cartel hacer lo que amas">
+                            <img src=".//img/Untitled.jpg" class="d-block w-100" alt="cartel hacer lo que amas">
                         </div>
                     </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
@@ -82,7 +86,7 @@
             </div>
         </section>
 
-        <section class="fondoh1Inicio">
+        <section class="fondohInicio">
             <h1>ArteRox</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione fugiat corrupti, deleniti blanditiis,
                 labore omnis optio accusantium, incidunt exercitationem accusamus et recusandae voluptatum?
@@ -94,6 +98,8 @@
             </p>
 
         </section>
+
+        <!----cards de items---->
 
         <section>
             <div class="listaProductos">
@@ -134,6 +140,8 @@
 
             </div>
         </section>
+
+        <!------Etapa final------->
 
         <section class="etapaFinal">
 
@@ -184,7 +192,7 @@
 
 
     </main>
-
+    <!----Footer------->
 
     <footer>
         <div>
@@ -196,11 +204,16 @@
                 <a href=".//pages/busqueda.html"><img class="imgLupa" src="./img/lupa.png" alt="Imagen de Busqueda"></a>
             </ul>
             <section>
-                <a target="_blank" href="https://api.whatsapp.com/send?phone=541156259700"><img src=".//img/whatsapp.png" alt="logo what ap"></a>
-                <a target="_blank" href="https://www.instagram.com/arte.rox/"><img src=".//img/instagram.png" alt="logo instagram"></a>
-                <a target="_blank" href="https://www.facebook.com/roxana.barreiro.56"><img src=".//img/facebook.png" alt="logo facebook"></a>
+                <a target="_blank" href="https://api.whatsapp.com/send?phone=541156259700"><img
+                        src=".//img/whatsapp.png" alt="logo what ap"></a>
+                <a target="_blank" href="https://www.instagram.com/arte.rox/"><img src=".//img/instagram.png"
+                        alt="logo instagram"></a>
+                <a target="_blank" href="https://www.facebook.com/roxana.barreiro.56"><img src=".//img/facebook.png"
+                        alt="logo facebook"></a>
 
             </section>
+
+            <!--copyright--->
 
             <p class="copy">&#9426 Industria Argentina. Todos los derechos Reservados.</p>
         </div>
