modif en tittle y linkeo a pages

--- a/index.html
+++ b/index.html
@@ -6,7 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=
     , initial-scale=1.0">
-    <title>arteRox⛏</title>
+    <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
+    <meta name="description" content="Lo que quieras hecho en MOSAIQUISMO, mesas, bandejas, espejos, cuadros, y productos mas pequeños como, porta sahumerios, espirales, tutores. Lo que quieras!">
+    <meta name="keywords" content="mosaiquismo, arte, cuadros, murales, bandejas, espejos, portaespirales, tutores">
+    <meta property="og:type" content="website">
+    <meta property="og:tittle" content="ArteRox | Arte en mosaico">
+    <title>ArteRox⛏Mosaiquismo</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -93,7 +98,8 @@
                 Necessitatibus, itaque tempore voluptatibus dolore quia quaerat.
                 Lorem ipsum dolor sit, amet consectetur adipisicing elit. Itaque dicta ullam unde aut delectus,
                 corporis,
-                harum hic id iste similique autem voluptates eligendi? Repellat, eveniet aperiam voluptate expedita
+                harum hic id iste similique internos
+                autem voluptates eligendi? Repellat, eveniet aperiam voluptate expedita
                 fugit commodi!
             </p>
 
@@ -172,18 +178,16 @@
 
             <div class="blog">
                 <h2>Blog</h2>
-                <h3>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officiis facilis dolores aut, illo aliquid
-                    exercitationem odio laborum ipsum culpa reprehenderit fugit non incidunt quisquam iusto dolore
-                    officia beatae magni repellendus!</h3>
+                <h3>Es muy lindo ver como la gente que me pide los trabajos queda feliz, sorprendida, a gusto con lo que pidio. Para mi es una enorme satisfaccion poder interpretarlos, y lograr cada detalle en lo que buscan.</h3>
 
                 <div class="blogClientes">
                     <div>
                         <img src=".//img/regalocumplemesa.jpg" alt="mesa ying yanj">
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptas, veritatis</p>
+                        <p>"Elegi el dibujo de la mesa para un regalo, pero la verdad, es que cuando la recibi, no lo podia creer...El trabajo de Roxy es magnifico!  A.B."</p>
                     </div>
                     <div>
                         <img src=".//img/regalobandeja.jpg" alt="bandeja tonos pasteles">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur error magni iure!</p>
+                        <p>Pedi algo sencillo para usar todos los dias, pero estas bandejas son lo mas, son muy hermosas y aparte decorativas.  L.P.</p>
                     </div>
                 </div>
             </div>
