--- a/pages/quiensoy.html
+++ b/pages/quiensoy.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=
     , initial-scale=1.0">
-    <title>arteRox⛏</title>
+    <link rel="shortcut icon" href="../img/favicon.ico" type="image/x-icon">
+    <title>ArteRox⛏Mosaiquismo</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
