mixins, correccion de rutas entre pages

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <meta name="viewport" content="width=
     , initial-scale=1.0">
     <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
-    <meta name="description" content="Lo que quieras hecho en MOSAIQUISMO, mesas, bandejas, espejos, cuadros, y productos mas pequeños como, porta sahumerios, espirales, tutores. Lo que quieras!">
+    <meta name="description"
+        content="Lo que quieras hecho en MOSAIQUISMO, mesas, bandejas, espejos, cuadros, y productos mas pequeños como, porta sahumerios, espirales, tutores. Lo que quieras!">
     <meta name="keywords" content="mosaiquismo, arte, cuadros, murales, bandejas, espejos, portaespirales, tutores">
     <meta property="og:type" content="website">
     <meta property="og:tittle" content="ArteRox | Arte en mosaico">
@@ -93,14 +94,13 @@
 
         <section class="fondohInicio">
             <h1>ArteRox</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione fugiat corrupti, deleniti blanditiis,
-                labore omnis optio accusantium, incidunt exercitationem accusamus et recusandae voluptatum?
-                Necessitatibus, itaque tempore voluptatibus dolore quia quaerat.
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Itaque dicta ullam unde aut delectus,
-                corporis,
-                harum hic id iste similique internos
-                autem voluptates eligendi? Repellat, eveniet aperiam voluptate expedita
-                fugit commodi!
+            <p>
+                El arte del mosaiquismo se basa en la confección de obras mediante la unión de diferentes piezas sobre
+                un soporte. Se realiza con pequeñas piezas de piedra, cerámica, terracota, vidrios de varios tamaños u
+                otros materiales similares de diversas formas, texturas y colores.
+                Te muestro las variadas cosas que pueden realizarse con esta tecnica, en realidad, puede hacerse lo que
+                se te ocurra.
+                Si se hace con amor...todo puede lograrse.
             </p>
 
         </section>
@@ -153,9 +153,9 @@
 
             <div class="tutorialGral">
                 <h2 class="tutorialTitulo">Tutorial</h2>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Delectus quae error corrupti, consequatur
-                    enim eius repellendus fugiat ad dolore. Quaerat, aspernatur cupiditate neque distinctio sit at odit
-                    recusandae possimus porro.</p>
+                <p>El siguiente es un video para que puedan ver como se costruye una obra desde cero, desde la seleccion
+                    de las piezas, el corte, limado, ubicacion en el mapa de trabajo, pegado, y finalmente pastinado.
+                    Por ultimo, quedan los detalles del alrededor, como pintura o barniz.</p>
                 <iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/nytFtf2zGFw"
                     title="YouTube video player" frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
@@ -166,11 +166,17 @@
                     <p class="tituloTrabajando">Pastinando</p>
                     <img class="imgTrabajando" src=".//img/armadonumero (1).png" alt="foto armado de numeracion">
                     <img class="imgTrabajando" src=".//img/enpastinar.png" alt="foto previo a pastinar">
-                    <p class="textoTrabajando">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magni a maxime,
-                        dolorem voluptate harum inventore aperiam rerum, nemo, eaque quae incidunt.</p>
-                    <p class="textoTrabajando">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cum facere
-                        eveniet sit id iusto, inventore tenetur ducimus ex debitis minus, voluptatem quidem? Praesentium
-                        nulla qui</p>
+                    <p class="textoTrabajando">El corte de las piezas, es un trabajo minucioso, ya que debe encajar en
+                        una parte
+                        especifica de nuestro trabajo, y debe coincidir con sus vecinas. Generalmente se hace a mano,
+                        con la
+                        ayuda de la "pinza de rueda". Pero otras veces, debe realizarce con un torno.</p>
+                    <p class="textoTrabajando">El pastinado es el proceso final, pero es muy importante elegir el color
+                        correcto
+                        para cada trabajo. Las piezas deben resaltar, asi que es clave el color elegido segun la paleta
+                        de colores
+                        del producto.
+                    </p>
                 </div>
 
             </div>
@@ -178,16 +184,20 @@
 
             <div class="blog">
                 <h2>Blog</h2>
-                <h3>Es muy lindo ver como la gente que me pide los trabajos queda feliz, sorprendida, a gusto con lo que pidio. Para mi es una enorme satisfaccion poder interpretarlos, y lograr cada detalle en lo que buscan.</h3>
+                <h3>Es muy lindo ver como la gente que me pide los trabajos queda feliz, sorprendida, a gusto con lo que
+                    pidio. Para mi es una enorme satisfaccion poder interpretarlos, y lograr cada detalle en lo que
+                    buscan.</h3>
 
                 <div class="blogClientes">
                     <div>
                         <img src=".//img/regalocumplemesa.jpg" alt="mesa ying yanj">
-                        <p>"Elegi el dibujo de la mesa para un regalo, pero la verdad, es que cuando la recibi, no lo podia creer...El trabajo de Roxy es magnifico!  A.B."</p>
+                        <p>"Elegi el dibujo de la mesa para un regalo, pero la verdad, es que cuando la recibi, no lo
+                            podia creer...El trabajo de Roxy es magnifico! A.B."</p>
                     </div>
                     <div>
                         <img src=".//img/regalobandeja.jpg" alt="bandeja tonos pasteles">
-                        <p>Pedi algo sencillo para usar todos los dias, pero estas bandejas son lo mas, son muy hermosas y aparte decorativas.  L.P.</p>
+                        <p>Pedi algo sencillo para usar todos los dias, pero estas bandejas son lo mas, son muy hermosas
+                            y aparte decorativas. L.P.</p>
                     </div>
                 </div>
             </div>
