--- a/pages/busqueda.html
+++ b/pages/busqueda.html
@@ -24,6 +24,9 @@
         <nav>
             <ul>
                 <li><a href="../index.html">Inicio</a></li>
+                <li><a href="./quiensoy.html">Quien Soy</a></li>
+                <li><a href="./trabajos.html">Trabajos</a></li>
+                <li><a href="./contacto.html">Contacto</a></li>
 
             </ul>
         </nav>
