--- a/pages/quiensoy.html
+++ b/pages/quiensoy.html
@@ -27,7 +27,7 @@
                 <li><a href="../index.html">Inicio</a></li>
                 <li> <a href="./trabajos.html">Trabajos</a> </li>
                 <li> <a href="./contacto.html">Contacto</a> </li>
-
+                <a href="./busqueda.html"><img class="imgLupa" src="../img/lupa.png" alt="Imagen de Busqueda"></a>
             </ul>
         </nav>
     </header>
