correccion de mediaquery

--- a/index.html
+++ b/index.html
@@ -167,15 +167,11 @@
                     <img class="imgTrabajando" src=".//img/armadonumero (1).png" alt="foto armado de numeracion">
                     <img class="imgTrabajando" src=".//img/enpastinar.png" alt="foto previo a pastinar">
                     <p class="textoTrabajando">El corte de las piezas, es un trabajo minucioso, ya que debe encajar en
-                        una parte
-                        especifica de nuestro trabajo, y debe coincidir con sus vecinas. Generalmente se hace a mano,
-                        con la
-                        ayuda de la "pinza de rueda". Pero otras veces, debe realizarce con un torno.</p>
+                        una parte especifica de nuestro trabajo, y debe coincidir con sus vecinas. Generalmente se hace
+                        a mano, con la ayuda de la "pinza de rueda". Pero otras veces, debe realizarce con un torno.</p>
                     <p class="textoTrabajando">El pastinado es el proceso final, pero es muy importante elegir el color
-                        correcto
-                        para cada trabajo. Las piezas deben resaltar, asi que es clave el color elegido segun la paleta
-                        de colores
-                        del producto.
+                        correcto para cada trabajo. Las piezas deben resaltar, asi que es clave el color elegido segun
+                        la paleta de colores del producto.
                     </p>
                 </div>
 
