agregado de texto a pages

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <meta name="keywords" content="mosaiquismo, arte, cuadros, murales, bandejas, espejos, portaespirales, tutores">
     <meta property="og:type" content="website">
     <meta property="og:tittle" content="ArteRox | Arte en mosaico">
+    <meta property=" og:description" content="Lo que quieras hecho en MOSAIQUISMO, mesas, bandejas, espejos, cuadros, y productos mas pequeños como, porta sahumerios, espirales, tutores. Lo que quieras!" >
+    <!----URL falta------>
     <title>ArteRox⛏Mosaiquismo</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -40,7 +42,7 @@
                     <li><a href="./index.html">Inicio</a></li>
                     <li><a href=".//pages/quiensoy.html">Quien Soy</a></li>
                     <li><a href=".//pages/trabajos.html">Trabajos</a></li>
-                    <li><a href=".//pages/trabajos.html">Contacto</a></li>
+                    <li><a href=".//pages/contacto.html">Contacto</a></li>
                     <a href=".//pages/busqueda.html"><img class="imgLupa" src=".//img/lupa.png"
                             alt="Imagen de Lupa"></a>
                 </ul>
@@ -97,9 +99,9 @@
             <p>
                 El arte del mosaiquismo se basa en la confección de obras mediante la unión de diferentes piezas sobre
                 un soporte. Se realiza con pequeñas piezas de piedra, cerámica, terracota, vidrios de varios tamaños u
-                otros materiales similares de diversas formas, texturas y colores.
-                Te muestro las variadas cosas que pueden realizarse con esta tecnica, en realidad, puede hacerse lo que
-                se te ocurra.
+                otros materiales similares de diversas formas, texturas y colores. 
+                Una de las ventajas del mosaiquismo es la versatilidad de los instrumentos a utilizar. Al tratarse de la combinación de piezas heterogéneas, con formas y tamaños diversos, se pueden aplicar desde pedazos de cerámica hasta las partes brillantes de un CD, o elemntos que ya no utilizammos en la cocina, como una taza.
+                Te muestro las variadas cosas que pueden realizarse con esta tecnica. En realidad, puede hacerse lo que se te ocurra.
                 Si se hace con amor...todo puede lograrse.
             </p>
 
@@ -181,14 +183,14 @@
             <div class="blog">
                 <h2>Blog</h2>
                 <h3>Es muy lindo ver como la gente que me pide los trabajos queda feliz, sorprendida, a gusto con lo que
-                    pidio. Para mi es una enorme satisfaccion poder interpretarlos, y lograr cada detalle en lo que
-                    buscan.</h3>
+                    pidió. Para mi, es una enorme satisfaccion poder interpretarlos, y lograr cada detalle en lo que
+                    buscan</h3>
 
                 <div class="blogClientes">
                     <div>
                         <img src=".//img/regalocumplemesa.jpg" alt="mesa ying yanj">
-                        <p>"Elegi el dibujo de la mesa para un regalo, pero la verdad, es que cuando la recibi, no lo
-                            podia creer...El trabajo de Roxy es magnifico! A.B."</p>
+                        <p>Elegi el dibujo de la mesa para un regalo, pero la verdad, es que cuando la recibi, no lo
+                            podia creer...El trabajo de Roxy es magnifico! A.B.</p>
                     </div>
                     <div>
                         <img src=".//img/regalobandeja.jpg" alt="bandeja tonos pasteles">
