--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -67,7 +67,7 @@
                     <input type="tel" name="telefono">
                     <br>
 
-                    <textarea name="texarea" id="" cols="30" rows="10">Escribe tu mensaje aquí...</textarea>
+                    <textarea  placeholder="Escribe tu mensaje aqui..." cols="30" rows="10"></textarea>
                     <br>
 
                     <input type="submit" value="Enviar Formulario">
