--- a/pages/quiensoy.html
+++ b/pages/quiensoy.html
@@ -34,13 +34,21 @@
     <main class="quienSoy">
         <h1>QUIEN SOY</h1>
         <div class="quienSoy__contenedor">
-            <img src="../img/hacerloqueamas.jpeg" alt="imagen hacer lo que amas">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere rem sint aliquam mollitia cupiditate
-                accusantium officiis itaque aut ad dolorem voluptas, et possimus illum ab consequuntur odio minus
-                tempore magnam.
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod dignissimos nobis eaque tenetur blanditiis
-                tempora deleniti architecto cum! Amet animi saepe consequatur eum qui culpa recusandae id quia natus
-                dolorem.
+            <img src="../img/hacerloqueamas.jpeg" alt="persona sosteniendo cartel hacer lo que amas">
+            <p>Hola! Soy Roxana. De joven me inicie en la carrera de maestra de nivel inicial, y eso requiere algunas
+                habilidades
+                para las manualidades 😉. Los trabajos hechos con las manos, siempre fueron mi descarga a tierra, mi
+                manera de expresarme.
+                He hecho muchas cosas a lo largo de mi vida, como trabajar con yeso, pintura...Hasta que descrubi el
+                MOSAIQUISMO.
+                En un viaje que hice, me cruce con muchos murales, que llamaron mi atencion, y asi es como empece a
+                investigar....y encontre una casa donde estudiar.
+                Desde ahi, no pare, y he realizado muchos trabajos, primero solo para probar, y ya luego mis familiares
+                me empezaron
+                a pedir cosas.
+                Para mi este arte es bellisimo, con una amplia gama de cosas para crear, sin restricciones.
+                Cada vez que me siento a elaborar una obra, soy feliz, solo eso puedo decir....
+
             </p>
         </div>
     </main>
@@ -54,9 +62,12 @@
                 <a href="./busqueda.html"><img class="imgLupa" src="../img/lupa.png" alt="Imagen de Busqueda"></a>
             </ul>
             <section>
-                <a target="_blank" href="https://api.whatsapp.com/send?phone=541156259700"><img src="../img/whatsapp.png" alt="logo what ap"></a>
-                <a target="_blank" href="https://www.instagram.com/arte.rox/"><img src="../img/instagram.png" alt="logo instagram"></a>
-                <a target="_blank" href="https://www.facebook.com/roxana.barreiro.56"><img src="../img/facebook.png" alt="logo facebook"></a>
+                <a target="_blank" href="https://api.whatsapp.com/send?phone=541156259700"><img
+                        src="../img/whatsapp.png" alt="logo what ap"></a>
+                <a target="_blank" href="https://www.instagram.com/arte.rox/"><img src="../img/instagram.png"
+                        alt="logo instagram"></a>
+                <a target="_blank" href="https://www.facebook.com/roxana.barreiro.56"><img src="../img/facebook.png"
+                        alt="logo facebook"></a>
 
             </section>
         </div>
