cambio de imagen en busqueda y otros

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <meta name="keywords" content="mosaiquismo, arte, cuadros, murales, bandejas, espejos, portaespirales, tutores">
     <meta property="og:type" content="website">
     <meta property="og:tittle" content="ArteRox | Arte en mosaico">
-    <meta property=" og:description" content="Lo que quieras hecho en MOSAIQUISMO, mesas, bandejas, espejos, cuadros, y productos mas pequeños como, porta sahumerios, espirales, tutores. Lo que quieras!" >
+    <meta property=" og:description"
+        content="Lo que quieras hecho en MOSAIQUISMO, mesas, bandejas, espejos, cuadros, y productos mas pequeños como, porta sahumerios, espirales, tutores. Lo que quieras!">
     <!----URL falta------>
     <title>ArteRox⛏Mosaiquismo</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -99,9 +100,13 @@
             <p>
                 El arte del mosaiquismo se basa en la confección de obras mediante la unión de diferentes piezas sobre
                 un soporte. Se realiza con pequeñas piezas de piedra, cerámica, terracota, vidrios de varios tamaños u
-                otros materiales similares de diversas formas, texturas y colores. 
-                Una de las ventajas del mosaiquismo es la versatilidad de los instrumentos a utilizar. Al tratarse de la combinación de piezas heterogéneas, con formas y tamaños diversos, se pueden aplicar desde pedazos de cerámica hasta las partes brillantes de un CD, o elemntos que ya no utilizammos en la cocina, como una taza.
-                Te muestro las variadas cosas que pueden realizarse con esta tecnica. En realidad, puede hacerse lo que se te ocurra.
+                otros materiales similares de diversas formas, texturas y colores.
+                Una de las ventajas del mosaiquismo es la versatilidad de los instrumentos a utilizar. Al tratarse de la
+                combinación de piezas heterogéneas, con formas y tamaños diversos, se pueden aplicar desde pedazos de
+                cerámica hasta las partes brillantes de un CD, o elemntos que ya no utilizammos en la cocina, como una
+                taza.
+                Te muestro las variadas cosas que pueden realizarse con esta tecnica. En realidad, puede hacerse lo que
+                se te ocurra.
                 Si se hace con amor...todo puede lograrse.
             </p>
 
