--- a/pages/busqueda.html
+++ b/pages/busqueda.html
@@ -7,6 +7,12 @@
     <meta name="viewport" content="width=
     , initial-scale=1.0">
     <link rel="shortcut icon" href="../img/favicon.ico" type="image/x-icon">
+    <meta name="description"
+        content="Lo que quieras hecho en MOSAIQUISMO, mesas, bandejas, espejos, cuadros, y productos mas pequeños como, porta sahumerios, espirales, tutores. Lo que quieras!">
+    <meta name="keywords" content="mosaiquismo, arte, cuadros, murales, bandejas, espejos, portaespirales, tutores">
+    <meta property="og:type" content="website">
+    <meta property="og:tittle" content="ArteRox | Arte en mosaico">
+    <meta property=" og:description" content="Lo que quieras hecho en MOSAIQUISMO, mesas, bandejas, espejos, cuadros, y productos mas pequeños como, porta sahumerios, espirales, tutores. Lo que quieras!" >
     <title>ArteRox⛏Mosaiquismo</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -37,7 +43,7 @@
 
             <label for="busqueda"></label><br>
             <input type="text" name="busqueda">
-            <a href="../index.html"> <img src="../img/lupa.png" alt="icono lupa"></a>
+            <a href="../index.html"> <img src="../img/pinzarueditas.jpg" alt="icono lupa"></a>
 
         </div>
     </main>
