correccion de mediaquerys 3

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                             <img src=".//img/carro-1.webp" class="d-block w-100" alt="imagen con cuadro">
                         </div>
                         <div class="carousel-item">
-                            <img src=".//img/carro-mesa.webp" class="d-block w-100" alt="mesa ying yang">
+                            <img src=".//img/carro-mesa.jpg" class="d-block w-100" alt="mesa ying yang">
                         </div>
                         <div class="carousel-item">
                             <img src=".//img/carro-expo.webp" class="d-block w-100" alt="exposicion de arte">
@@ -170,13 +170,13 @@
 
                 <div class="trabajando">
                     <p class="tituloTrabajando">Cortando piezas</p>
-                    <p class="tituloTrabajando">Pastinando</p>
+                    <p class="tituloTrabajando2">Pastinando</p>
                     <img class="imgTrabajando" src=".//img/armadonumero (1).png" alt="foto armado de numeracion">
-                    <img class="imgTrabajando" src=".//img/enpastinar.png" alt="foto previo a pastinar">
+                    <img class="imgTrabajando2" src=".//img/enpastinar.png" alt="foto previo a pastinar">
                     <p class="textoTrabajando">El corte de las piezas, es un trabajo minucioso, ya que debe encajar en
                         una parte especifica de nuestro trabajo, y debe coincidir con sus vecinas. Generalmente se hace
                         a mano, con la ayuda de la "pinza de rueda". Pero otras veces, debe realizarce con un torno.</p>
-                    <p class="textoTrabajando">El pastinado es el proceso final, pero es muy importante elegir el color
+                    <p class="textoTrabajando2">El pastinado es el proceso final, pero es muy importante elegir el color
                         correcto para cada trabajo. Las piezas deben resaltar, asi que es clave el color elegido segun
                         la paleta de colores del producto.
                     </p>
