Ultimos arreglos de mediaquerys y css

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
     <!-----Main-------->
     <main>
-        <section>
+        <section class="hero" >
             <!--carrusel-->
             <div class="imgCarrusel">
                 <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
@@ -92,6 +92,21 @@
                         <span class="visually-hidden">Next</span>
                     </button>
                 </div>
+            </div>
+            <div id="demotext" >
+                <h3>	
+                    CUADRO MARILYN: este es uno de los rostros mejores logrados, he recibido muy buenas
+                    criticas de esta belleza. Es muy dificil copiar una cara, imaginense en mosaico!!!
+                </h3><br>
+                <h3>
+                    MESA YING-YANG: esta fue la primer mesa que hice, y sin embargo, los detalles, cortes, pastina, el total del trabajo, fue expectacular, Amo esta mesa!
+                </h3><br>
+                <h3>
+                    EXPOSICION DE ARTE: realizada en la Torre Eiffel de ituzaingo. Varios artistas, de distintas ramas, expusimos nuestras obras. 
+                </h3><br>
+                <h3>
+                    FRASE: una simple frase, dificil de llevar a la accion...
+                </h3>
             </div>
         </section>
 
