--- a/pages/quiensoy.html
+++ b/pages/quiensoy.html
@@ -12,7 +12,8 @@
     <meta name="keywords" content="mosaiquismo, arte, cuadros, murales, bandejas, espejos, portaespirales, tutores">
     <meta property="og:type" content="website">
     <meta property="og:tittle" content="ArteRox | Arte en mosaico">
-    <meta property=" og:description" content="Lo que quieras hecho en MOSAIQUISMO, mesas, bandejas, espejos, cuadros, y productos mas pequeños como, porta sahumerios, espirales, tutores. Lo que quieras!" >
+    <meta property=" og:description"
+        content="Lo que quieras hecho en MOSAIQUISMO, mesas, bandejas, espejos, cuadros, y productos mas pequeños como, porta sahumerios, espirales, tutores. Lo que quieras!">
     <title>ArteRox⛏Mosaiquismo</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -26,16 +27,20 @@
 <body>
     <header class="contenedorHeader">
         <!--LOGO-->
-        <a href="../index.html"><img class="logo" src="../img/logopared.jpeg" alt="imagen logo"></a>
+        <div>
+            <a href="../index.html"><img class="logo" src="../img/logopared.jpeg" alt="imagen logo"></a>
+        </div>
 
-        <nav>
-            <ul>
-                <li><a href="../index.html">Inicio</a></li>
-                <li> <a href="./trabajos.html">Trabajos</a> </li>
-                <li> <a href="./contacto.html">Contacto</a> </li>
-                <a href="./busqueda.html"><img class="imgLupa" src="../img/lupa.png" alt="Imagen de Busqueda"></a>
-            </ul>
-        </nav>
+        <div>
+            <nav>
+                <ul>
+                    <li><a href="../index.html">Inicio</a></li>
+                    <li> <a href="./trabajos.html">Trabajos</a> </li>
+                    <li> <a href="./contacto.html">Contacto</a> </li>
+                    <a href="./busqueda.html"><img class="imgLupa" src="../img/lupa.png" alt="Imagen de Busqueda"></a>
+                </ul>
+            </nav>
+        </div>
     </header>
     <main class="quienSoy">
         <h1>QUIEN SOY</h1>
