--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -12,7 +12,8 @@
     <meta name="keywords" content="mosaiquismo, arte, cuadros, murales, bandejas, espejos, portaespirales, tutores">
     <meta property="og:type" content="website">
     <meta property="og:tittle" content="ArteRox | Arte en mosaico">
-    <meta property=" og:description" content="Lo que quieras hecho en MOSAIQUISMO, mesas, bandejas, espejos, cuadros, y productos mas pequeños como, porta sahumerios, espirales, tutores. Lo que quieras!" >
+    <meta property=" og:description"
+        content="Lo que quieras hecho en MOSAIQUISMO, mesas, bandejas, espejos, cuadros, y productos mas pequeños como, porta sahumerios, espirales, tutores. Lo que quieras!">
     <title>ArteRox⛏Mosaiquismo</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -26,16 +27,19 @@
 <body>
     <header class="contenedorHeader">
         <!--LOGO-->
-        <a href="../index.html"><img class="logo" src="../img/logopared.jpeg" alt="imagen logo"></a>
-
-        <nav>
-            <ul>
-                <li><a href="../index.html">Inicio</a></li>
-                <li><a href="./quiensoy.html">Quien Soy</a></li>
-                <li><a href="./trabajos.html">Trabajos</a></li>
-                <a href="./busqueda.html"><img class="imgLupa" src="../img/lupa.png" alt="Imagen de Busqueda"></a>
-            </ul>
-        </nav>
+        <div>
+            <a href="../index.html"><img class="logo" src="../img/logopared.jpeg" alt="imagen logo"></a>
+        </div>
+        <div>
+            <nav>
+                <ul>
+                    <li><a href="../index.html">Inicio</a></li>
+                    <li><a href="./quiensoy.html">Quien Soy</a></li>
+                    <li><a href="./trabajos.html">Trabajos</a></li>
+                    <a href="./busqueda.html"><img class="imgLupa" src="../img/lupa.png" alt="Imagen de Busqueda"></a>
+                </ul>
+            </nav>
+        </div>
     </header>
     <main>
         <section class="formulario">
@@ -43,7 +47,7 @@
             <img src="../img/2Untitled.png" alt="imagen de fondo mural">
 
             <form action="">
-                
+
                 <div>
 
                     <label for="nombreyapellido">Nombre y Apellido</label><br>
@@ -73,7 +77,7 @@
                     <input type="tel" name="telefono">
                     <br>
 
-                    <textarea  placeholder="Escribe tu mensaje aqui..." cols="30" rows="10"></textarea>
+                    <textarea placeholder="Escribe tu mensaje aqui..." cols="30" rows="10"></textarea>
                     <br>
 
                     <input type="submit" value="Enviar Formulario">
@@ -98,9 +102,12 @@
             <a href="./busqueda.html"><img class="imgLupa" src="../img/lupa.png" alt="Imagen de Busqueda"></a>
         </ul>
         <section>
-            <a target="_blank" href="https://api.whatsapp.com/send?phone=541156259700"><img src="../img/whatsapp.png" alt="logo what ap"></a>
-            <a target="_blank" href="https://www.instagram.com/arte.rox/"><img src="../img/instagram.png" alt="logo instagram"></a>
-            <a target="_blank" href="https://www.facebook.com/roxana.barreiro.56"><img src="../img/facebook.png" alt="logo facebook"></a>
+            <a target="_blank" href="https://api.whatsapp.com/send?phone=541156259700"><img src="../img/whatsapp.png"
+                    alt="logo what ap"></a>
+            <a target="_blank" href="https://www.instagram.com/arte.rox/"><img src="../img/instagram.png"
+                    alt="logo instagram"></a>
+            <a target="_blank" href="https://www.facebook.com/roxana.barreiro.56"><img src="../img/facebook.png"
+                    alt="logo facebook"></a>
 
         </section>
 
