ultimas correcciones pre entrega

--- a/index.html
+++ b/index.html
@@ -209,8 +209,7 @@
                 <div class="blogClientes">
                     <div>
                         <img src=".//img/regalocumplemesa.jpg" alt="mesa ying yanj">
-                        <p>Elegi el dibujo de la mesa para un regalo, pero la verdad, es que cuando la recibi, no lo
-                            podia creer...El trabajo de Roxy es magnifico! A.B.</p>
+                        <p>Elegi el dibujo de la mesa, pero no pense que podria quedar asi, tan genial. El trabajo de Roxy es magnifico! A.B.</p>
                     </div>
                     <div>
                         <img src=".//img/regalobandeja.jpg" alt="bandeja tonos pasteles">
