ventanas modales en imagenes lista productos

--- a/pages/quiensoy.html
+++ b/pages/quiensoy.html
@@ -45,7 +45,7 @@
     <main class="quienSoy">
         <h1>QUIEN SOY</h1>
         <div class="quienSoy__contenedor">
-            <img src="../img/hacerloqueamas.jpeg" alt="persona sosteniendo cartel hacer lo que amas">
+            <img  class="imgQuiensoy" src="../img/hacerloqueamas.jpeg" alt="persona sosteniendo cartel hacer lo que amas">
             <p>Hola! Soy Roxana. De joven me inicie en la carrera de maestra de nivel inicial, y eso requiere algunas
                 habilidades
                 para las manualidades 😉. Los trabajos hechos con las manos, siempre fueron mi descarga a tierra, mi
