--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
     <!-----Main-------->
     <main>
-        <section class="hero" >
+        <section class="hero">
             <!--carrusel-->
             <div class="imgCarrusel">
                 <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
@@ -93,16 +93,18 @@
                     </button>
                 </div>
             </div>
-            <div id="demotext" >
-                <h3>	
+            <div id="demotext">
+                <h3>
                     CUADRO MARILYN: este es uno de los rostros mejores logrados, he recibido muy buenas
                     criticas de esta belleza. Es muy dificil copiar una cara, imaginense en mosaico!!!
                 </h3><br>
                 <h3>
-                    MESA YING-YANG: esta fue la primer mesa que hice, y sin embargo, los detalles, cortes, pastina, el total del trabajo, fue expectacular, Amo esta mesa!
+                    MESA YING-YANG: esta fue la primer mesa que hice, y sin embargo, los detalles, cortes, pastina, el
+                    total del trabajo, fue expectacular, Amo esta mesa!
                 </h3><br>
                 <h3>
-                    EXPOSICION DE ARTE: realizada en la Torre Eiffel de ituzaingo. Varios artistas, de distintas ramas, expusimos nuestras obras. 
+                    EXPOSICION DE ARTE: realizada en la Torre Eiffel de ituzaingo. Varios artistas, de distintas ramas,
+                    expusimos nuestras obras.
                 </h3><br>
                 <h3>
                     FRASE: una simple frase, dificil de llevar a la accion...
@@ -134,39 +136,120 @@
 
                 <div class="textoenContenedor">
                     <img src=".//img/cuadroportada1.JPG" alt="imagen cuadro portada">
-                    <a href=".//pages/cuadros.html">cuadros</a>
+                    <a href="#!" data-bs-toggle="modal" data-bs-target="#modalImage1">cuadros</a>
                 </div>
                 <div class="textoenContenedor">
                     <img src=".//img/mesaportada.jpeg" alt="imagen mesa portada">
-                    <a href="">mesas</a>
+                    <a href="#!" data-bs-toggle="modal" data-bs-target="#modalImage2">mesas</a>
                 </div>
                 <div class="textoenContenedor">
                     <img src=".//img/masetaportada.jpeg" alt="imagen maceta portada">
-                    <a href="">macetas</a>
+                    <a href="#!" data-bs-toggle="modal" data-bs-target="#modalImage3">macetas</a>
                 </div>
                 <div class="textoenContenedor">
                     <img src=".//img/espejoportada.jpeg" alt="imagen espejo portada">
-                    <a href="">espejos</a>
+                    <a href="#!" data-bs-toggle="modal" data-bs-target="#modalImage4">espejos</a>
                 </div>
 
                 <div class="textoenContenedor">
                     <img src=".//img/bandejaportada.jpeg" alt="imagen bandeja portada">
-                    <a href="">bandejas</a>
+                    <a href="#!" data-bs-toggle="modal" data-bs-target="#modalImage5">bandejas</a>
                 </div>
                 <div class="textoenContenedor">
                     <img src=".//img/imgnuemracionportada.jpeg" alt="imagen numero portada">
-                    <a href="">numeracion</a>
+                    <a href="#!" data-bs-toggle="modal" data-bs-target="#modalImage6">numeracion</a>
                 </div>
                 <div class="textoenContenedor">
                     <img src=".//img/detalle portada.jpeg" alt="imagen detalle portada">
-                    <a href="">detalles</a>
+                    <a href="#!" data-bs-toggle="modal" data-bs-target="#modalImage7">detalles</a>
                 </div>
                 <div class="textoenContenedor">
                     <img src=".//img/picasieteportada.JPG" alt="imagen reciclando">
-                    <a href="">reciclando</a>
+                    <a href="#!" data-bs-toggle="modal" data-bs-target="#modalImage8">reciclando</a>
                 </div>
-
             </div>
+
+            <!-----Img 1------->>
+
+            <div tabindex="-1" aria-labelledby="modalImage1" aria-hidden="true" class="modal fade" id="modalImage1">
+                <div class="modal-dialog modal-lg modal-dialog-centered">
+                    <div class="modal-content">
+                        <img src=".//img/cuadromarilyn.jpeg" alt="Cuadro de Marilyn">
+                    </div>
+                </div>
+            </div>
+
+            <!-----Img 2------->>
+
+            <div tabindex="-1" aria-labelledby="modalImage2" aria-hidden="true" class="modal fade" id="modalImage2">
+                <div class="modal-dialog modal-lg modal-dialog-centered">
+                    <div class="modal-content">
+                        <img src=".//img/mesa2 (17).jpg" alt="Mesa Blanca">
+                    </div>
+                </div>
+            </div>
+
+            <!-----Img 3------->>
+
+            <div tabindex="-1" aria-labelledby="modalImage3" aria-hidden="true" class="modal fade" id="modalImage3">
+                <div class="modal-dialog modal-lg modal-dialog-centered">
+                    <div class="modal-content">
+                        <img src=".//img/maseta1.jpeg" alt="imagen Maceta">
+                    </div>
+                </div>
+            </div>
+
+            <!-----Img 4------->>
+
+            <div tabindex="-1" aria-labelledby="modalImage4" aria-hidden="true" class="modal fade" id="modalImage4">
+                <div class="modal-dialog modal-lg modal-dialog-centered">
+                    <div class="modal-content">
+                        <img src=".//img/espejoportada.jpeg" alt="imagen Espejo">
+                    </div>
+                </div>
+            </div>
+
+            <!-----Img 5------->>
+
+            <div tabindex="-1" aria-labelledby="modalImage5" aria-hidden="true" class="modal fade" id="modalImage5">
+                <div class="modal-dialog modal-lg modal-dialog-centered">
+                    <div class="modal-content">
+                        <img src=".//img/bandeja1.jpeg" alt="imagen Bandeja">
+                    </div>
+                </div>
+            </div>
+
+            <!-----Img 6------->>
+
+            <div tabindex="-1" aria-labelledby="modalImage6" aria-hidden="true" class="modal fade" id="modalImage6">
+                <div class="modal-dialog modal-lg modal-dialog-centered">
+                    <div class="modal-content">
+                        <img src="" alt="imagen numeracion">
+                    </div>
+                </div>
+            </div>
+
+            <!-----Img 7------->>
+
+            <div tabindex="-1" aria-labelledby="modalImage7" aria-hidden="true" class="modal fade" id="modalImage7">
+                <div class="modal-dialog modal-lg modal-dialog-centered">
+                    <div class="modal-content">
+                        <img src=".//img/detalles2.jpg" alt="imagen portasahumerios">
+                    </div>
+                </div>
+            </div>
+
+            <!-----Img 8------->>
+
+            <div tabindex="-1" aria-labelledby="modalImage8" aria-hidden="true" class="modal fade" id="modalImage8">
+                <div class="modal-dialog modal-lg modal-dialog-centered">
+                    <div class="modal-content">
+                        <img src=".//img/picasiete3.JPG" alt="imagen cuadro con jarrito y flores">
+                    </div>
+                </div>
+            </div>
+
+
         </section>
 
         <!------Etapa final------->
@@ -209,7 +292,8 @@
                 <div class="blogClientes">
                     <div>
                         <img src=".//img/regalocumplemesa.jpg" alt="mesa ying yanj">
-                        <p>Elegi el dibujo de la mesa, pero no pense que podria quedar asi, tan genial. El trabajo de Roxy es magnifico! A.B.</p>
+                        <p>Elegi el dibujo de la mesa, pero no pense que podria quedar asi, tan genial. El trabajo de
+                            Roxy es magnifico! A.B.</p>
                     </div>
                     <div>
                         <img src=".//img/regalobandeja.jpg" alt="bandeja tonos pasteles">
