--- a/index.html
+++ b/index.html
@@ -78,7 +78,8 @@
                             <img src=".//img/carro-expo.webp" class="d-block w-100" alt="exposicion de arte">
                         </div>
                         <div class="carousel-item">
-                            <img src=".//img/Untitled.jpg" class="d-block w-100" alt="cartel hacer lo que amas">
+                            <img src=".//img/carro-cartelhacerloqueamas.jpg" class="d-block w-100"
+                                alt="cartel hacer lo que amas">
                         </div>
                     </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
@@ -169,27 +170,27 @@
                 </div>
             </div>
 
-            <!-----Img 1------->>
+            <!-----Img 1------->
 
             <div tabindex="-1" aria-labelledby="modalImage1" aria-hidden="true" class="modal fade" id="modalImage1">
-                <div class="modal-dialog modal-lg modal-dialog-centered">
+                <div class="modal-dialog modal-lg nmodal-dialog-centered">
                     <div class="modal-content">
-                        <img src=".//img/cuadromarilyn.jpeg" alt="Cuadro de Marilyn">
+                        <img src=".//img/image.png" alt="Cuadro de Marilyn">
                     </div>
                 </div>
             </div>
 
-            <!-----Img 2------->>
+            <!-----Img 2------->
 
             <div tabindex="-1" aria-labelledby="modalImage2" aria-hidden="true" class="modal fade" id="modalImage2">
                 <div class="modal-dialog modal-lg modal-dialog-centered">
                     <div class="modal-content">
-                        <img src=".//img/mesa2 (17).jpg" alt="Mesa Blanca">
+                        <img src=".//img/mesablancamodificada.jpg" alt="Mesa Blanca">
                     </div>
                 </div>
             </div>
 
-            <!-----Img 3------->>
+            <!-----Img 3------->
 
             <div tabindex="-1" aria-labelledby="modalImage3" aria-hidden="true" class="modal fade" id="modalImage3">
                 <div class="modal-dialog modal-lg modal-dialog-centered">
@@ -199,7 +200,7 @@
                 </div>
             </div>
 
-            <!-----Img 4------->>
+            <!-----Img 4------->
 
             <div tabindex="-1" aria-labelledby="modalImage4" aria-hidden="true" class="modal fade" id="modalImage4">
                 <div class="modal-dialog modal-lg modal-dialog-centered">
@@ -209,7 +210,7 @@
                 </div>
             </div>
 
-            <!-----Img 5------->>
+            <!-----Img 5------->
 
             <div tabindex="-1" aria-labelledby="modalImage5" aria-hidden="true" class="modal fade" id="modalImage5">
                 <div class="modal-dialog modal-lg modal-dialog-centered">
@@ -219,17 +220,17 @@
                 </div>
             </div>
 
-            <!-----Img 6------->>
+            <!-----Img 6------->
 
             <div tabindex="-1" aria-labelledby="modalImage6" aria-hidden="true" class="modal fade" id="modalImage6">
                 <div class="modal-dialog modal-lg modal-dialog-centered">
                     <div class="modal-content">
-                        <img src="" alt="imagen numeracion">
+                        <img src=".//img/imgnuemracionportada.jpeg" alt="imagen numeracion">
                     </div>
                 </div>
             </div>
 
-            <!-----Img 7------->>
+            <!-----Img 7------->
 
             <div tabindex="-1" aria-labelledby="modalImage7" aria-hidden="true" class="modal fade" id="modalImage7">
                 <div class="modal-dialog modal-lg modal-dialog-centered">
@@ -239,7 +240,7 @@
                 </div>
             </div>
 
-            <!-----Img 8------->>
+            <!-----Img 8------->
 
             <div tabindex="-1" aria-labelledby="modalImage8" aria-hidden="true" class="modal fade" id="modalImage8">
                 <div class="modal-dialog modal-lg modal-dialog-centered">
